# law-enforcer

./: .gitignore  README.md  level.xml  player.xml  world.xml
Law Enforcer/: CMakeLists.txt  Law Enforcer.sln
Law Enforcer/Debug/: Test.ilk
Law Enforcer/Law Enforcer/: Boss.cpp  Boss.h  Entity.cpp  Entity.h  Inputs.cpp  Inputs.h  Law Enforcer.cpp  Law Enforcer.vcxproj  Law Enforcer.vcxproj.filters  Level.cpp  Level.h  LevelContactListener.cpp  LevelContactListener.h  LevelObject.cpp  LevelObject.h  Platform.cpp  Platform.h  Player.cpp  Player.h  PlayerContactListener.cpp  PlayerContactListener.h  global_definitions.cpp  global_definitions.h  pch.h
Law Enforcer/Law Enforcer/Debug/: Law Enforcer.pch  vc141.idb
Law Enforcer/Law Enforcer/Debug/Law Enforcer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Law Enforcer/Law Enforcer/x64/Debug/: Law Enforcer.pch  vc141.idb
Law Enforcer/Law Enforcer/x64/Debug/Law Enforcer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Law Enforcer.lastbuildstate
Law Enforcer/Main Law Enforcer/: Main Law Enforcer.cpp  Main Law Enforcer.vcxproj  Main Law Enforcer.vcxproj.filters
Law Enforcer/Main Law Enforcer/Debug/: Main Law Enforcer.pch  vc141.idb
Law Enforcer/Main Law Enforcer/Debug/Main Law.6FFD92E2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Main Law Enforcer.lastbuildstate
Law Enforcer/Main Law Enforcer/x64/Debug/: Main Law Enforcer.pch  vc141.idb
Law Enforcer/Main Law Enforcer/x64/Debug/Main Law.6FFD92E2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Main Law Enforcer.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Law Enforcer/Test/: Test.vcxproj
Law Enforcer/Test/Debug/: vc141.idb
Law Enforcer/Test/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Test.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Law Enforcer/Test/x64/Debug/: vc141.idb
Law Enforcer/Test/x64/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Test.lastbuildstate  Test.write.1u.tlog  link.command.1.tlog  (+2 more)
Law Enforcer/x64/Debug/: Test.ilk
Law Enforcer/xml/: level.xml  level1.xml  level2.xml
